# big_data_f1_project

./: .gitignore  .mcp.json  01_f1_ingest_bronze.ipynb  02_f1_transform_silver.ipynb  03_f1_build_gold.ipynb  README.md  analyze_data.ipynb  demo_queries.txt  f1_pipeline_driver.ipynb
mcp_server/: .env.example  .gitignore  README.md  pyproject.toml
mcp_server/src/f1_mcp/: __init__.py  config.py  server.py
mcp_server/src/f1_mcp/services/: __init__.py  chart_service.py  databricks_client.py  model_service.py
mcp_server/src/f1_mcp/tools/: __init__.py  ml_tools.py  schema_tools.py  sql_tools.py  visualization_tools.py
mcp_server/src/f1_mcp/utils/: __init__.py  formatters.py  validators.py
mcp_server/tests/: __init__.py  test_tools.py
