[project]
name = "f1-mcp-server"
version = "0.1.0"
description = "FastMCP server for F1 Databricks data gateway"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "databricks-sdk>=0.38.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
f1-mcp = "f1_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/f1_mcp"]

